crates/shwasi-engine/tests/snapshots/integration__simple.snap
---
source: crates/shwasi-engine/tests/tests.rs
expression: pretty_fmt(&module)
---
types
---
0: (i32) -> (i32)

functions
---
0: func (0)

codes
---
0: locals: []
i32.const 10
i32.const 20
i32.add
return



